# optimizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  claude_best_practice.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  script.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 1c95f3fd3da4_remove_jsonb_columns_raw_json_and_.py  1e14baf18033_add_server_defaults_to_timestamp_columns.py  6b106e82ce20_increase_financial_statements_value_.py  a1b2c3d4e5f6_rebuild_macro_tables_to_match_orm.py  b0b30daa80c5_normalize_and_optimize_models.py  b2c3d4e5f6a7_drop_orphaned_tables.py  bdd615f586f8_remove_users_table.py  c3d4e5f6a7b8_align_exchanges_with_orm.py  c51c70973022_normalize_instruments_drop_exchange_.py  cfc1deec33d6_add_yfinance_data_tables.py  d4e5f6a7b8c9_add_delisting_columns_to_instruments.py  ecf0a9a2bfdc_add_macro_regime_tables.py  ff232ce0534f_initial_schema_users_exchanges_.py
api/app/: config.py  database.py  dependencies.py  exceptions.py  main.py
api/app/api/v1/: database.py  llm_moments.py  macro_calibration.py  macro_regime.py  opinion_pooling.py  risk_budget.py  router.py  stress_scenarios.py  test.py  trading212.py  views.py  yfinance_data.py
api/app/middleware/: __init__.py  logging.py  rate_limiting.py  security.py
api/app/models/: __init__.py  base.py  macro_regime.py  universe.py  yfinance_data.py
api/app/repositories/: __init__.py  base.py  macro_regime_repository.py  universe_repository.py  yfinance_repository.py
api/app/schemas/: __init__.py  macro_regime.py  trading212.py  yfinance_data.py
api/app/services/: __init__.py  llm_moments.py  macro_calibration.py  macro_regime_service.py  opinion_pooling.py  risk_budget_service.py  sentiment.py  stress_scenarios.py  trading_calendar.py  view_generation.py  yfinance_data_service.py
api/app/services/scrapers/: __init__.py  ilsole_scraper.py  tradingeconomics_scraper.py
api/app/services/trading212/: __init__.py  builder.py  client.py  config.py  protocols.py  ticker_mapper.py
api/app/services/trading212/filters/: __init__.py  data_coverage.py  historical_data.py  liquidity.py  market_cap.py  pipeline.py  price.py
api/app/services/yfinance/: __init__.py  _base.py  _facade.py
api/app/services/yfinance/infrastructure/: __init__.py  cache.py  circuit_breaker.py  rate_limiter.py  retry.py
api/app/services/yfinance/market/: __init__.py  calendars.py  market.py  screener.py  search.py  sector_industry.py  streaming.py
api/app/services/yfinance/news/: __init__.py  aggregator.py  client.py  scraper.py
api/app/services/yfinance/protocols/: __init__.py  interfaces.py
api/app/services/yfinance/ticker/: __init__.py  analysis.py  corporate_actions.py  financials.py  funds.py  holders.py  metadata.py
api/baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
api/baml_src/: AdaptFactorWeights.baml  CalibrateDelta.baml  CalibrateRiskBudget.baml  ClassifyMacroRegime.baml  DesignStressScenarios.baml  ExpertView.baml  GenerateViews.baml  ScoreNewsSentiment.baml  SelectCovRegime.baml
api/tests/: conftest.py
api/tests/unit/: test_data_assembly_delisting.py  test_llm_moments.py  test_macro_calibration.py  test_opinion_pooling.py  test_risk_budget_service.py  test_sentiment.py  test_stress_scenarios.py  test_view_generation.py
cli/: __init__.py  __main__.py  client.py  data_assembly.py  db.py  direct_fetch.py  display.py  macro.py  portfolio.py  universe.py  yfinance.py
docs/: index.md
docs/api/: factors.md  moments.md  optimization.md  pipeline.md  pre_selection.md  preprocessing.md  rebalancing.md  scoring.md  synthetic.md  tuning.md  universe.md  validation.md  views.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: factors.md  moments.md  optimization.md  pipeline.md  pre-selection.md  preprocessing.md  rebalancing.md  scoring.md  synthetic.md  tuning.md  universe.md  validation.md  views.md
examples/: factor_selection.py  full_pipeline.py  quickstart.py  regime_blending.py  robust_optimization.py
frontend/: README.md  angular.json  package-lock.json  package.json
optimizer/: .gitignore  README.md  __init__.py  alembic.ini  exceptions.py  requirements.txt
optimizer/.claude/: CLAUDE.md
optimizer/alembic/: env.py
optimizer/app/: config.py  database.py  dependencies.py  exceptions.py
optimizer/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
optimizer/baml_src/: black_litterman_parameters.baml  black_litterman_views.baml  clients.baml  comprehensive_stock_data.baml  cycle_classifier.baml  stock_news_summary.baml  stock_signals.baml  summarize_news.baml
optimizer/config/: __init__.py  optimizer_config.py  portfolio_config.py  quality_filter_config.py  universe_builder_config.py
optimizer/database/: config.py  database.py  dependencies.py
optimizer/docker/: .dockerignore  Dockerfile  README.md  crontab  docker-compose.yml  entrypoint.sh  run_daily_analysis.sh
optimizer/domain/: __init__.py
optimizer/factors/: __init__.py  _alpha.py  _config.py  _construction.py  _diagnostics.py  _integration.py  _mimicking.py  _ml_scoring.py  _oos_validation.py  _regime.py  _scoring.py  _selection.py  _standardization.py  _validation.py
optimizer/mappers/: __init__.py  instrument_mapper.py  (+2 more)
portfolio_guideline/: README.md  build.sh  main.md
research/: README.md  build.sh  main.md
scheduler/: Dockerfile  crontab  fetch.sh
tests/: conftest.py  test_properties.py
theory/: bibliography.md  build.sh  main.md
trading212_documentation/: trading212.md
(+369 files in other folders)
