[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimizer"
version = "0.1.0"
description = "Portfolio optimization library built on skfolio and scikit-learn"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Silvio Baratto"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.6",
    "skfolio>=0.5",
    "hmmlearn>=0.3.3",
    "arch>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.0",
    "pre-commit>=3.5",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
optimizer = "cli:app"

[tool.setuptools.packages.find]
include = ["optimizer*", "cli*"]

[tool.setuptools.package-data]
optimizer = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S", "RUF", "C4", "PTH"]
ignore = ["RUF002", "RUF003"]  # allow unicode in docstrings/comments (mathematical notation)

[tool.ruff.lint.per-file-ignores]
"optimizer/**" = ["N803", "N806"]  # sklearn convention: X, y parameter names
"tests/**" = ["N803", "N806", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# sklearn/skfolio lack type stubs — suppress errors from untyped bases
[[tool.mypy.overrides]]
module = "optimizer.preprocessing.*"
disallow_subclassing_any = false

# skfolio BaseMu / BaseCovariance / BlackLitterman lack type stubs — suppress subclassing errors
[[tool.mypy.overrides]]
module = [
    "optimizer.moments._hmm",
    "optimizer.views._factory",
]
disallow_subclassing_any = false

# torch/pyro have incomplete stubs — suppress all strict errors for the DMM module
[[tool.mypy.overrides]]
module = "optimizer.moments._dmm"
disallow_subclassing_any = false
disallow_untyped_calls = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "optimizer.scoring._factory",
    "optimizer.validation._factory",
    "optimizer.rebalancing._rebalancer",
]
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
