[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portopt"
version = "0.1.0"
description = "Portfolio optimization library built on skfolio and scikit-learn"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Silvio Baratto"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.6",
    "skfolio>=0.5",
    "hmmlearn>=0.3.3",
    "arch>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/SilvioBaratto/optimizer"
Documentation = "https://silviobaratto.github.io/optimizer"
Repository = "https://github.com/SilvioBaratto/optimizer"
Issues = "https://github.com/SilvioBaratto/optimizer/issues"
Changelog = "https://github.com/SilvioBaratto/optimizer/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-cov>=4.0", "hypothesis>=6.0"]
lint = ["ruff>=0.1", "pip-audit>=2.6"]
typecheck = ["mypy>=1.5", "pyright[nodejs]==1.1.398"]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]
dmm = ["torch>=2.0", "pyro-ppl>=1.9"]
dev = ["portopt[test,lint,typecheck,docs]", "pre-commit>=3.5"]

[project.scripts]
optimizer = "cli:app"

[tool.setuptools.packages.find]
include = ["optimizer*", "cli*"]

[tool.setuptools.package-data]
optimizer = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "S", "RUF", "C4", "PTH"]
ignore = ["RUF002", "RUF003"]  # allow unicode in docstrings/comments (mathematical notation)

[tool.ruff.lint.per-file-ignores]
"optimizer/__init__.py" = ["E402"]  # logging NullHandler must precede module imports
"optimizer/**" = ["N803", "N806"]  # sklearn convention: X, y parameter names
"tests/**" = ["N803", "N806", "S101"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# sklearn/skfolio lack type stubs — suppress errors from untyped bases
[[tool.mypy.overrides]]
module = "optimizer.preprocessing.*"
disallow_subclassing_any = false

# skfolio BaseMu / BaseCovariance / BlackLitterman lack type stubs — suppress subclassing errors
[[tool.mypy.overrides]]
module = [
    "optimizer.moments._hmm",
    "optimizer.views._factory",
]
disallow_subclassing_any = false

# torch/pyro have incomplete stubs — suppress all strict errors for the DMM module
[[tool.mypy.overrides]]
module = "optimizer.moments._dmm"
disallow_subclassing_any = false
disallow_untyped_calls = false
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "optimizer.scoring._factory",
    "optimizer.validation._factory",
    "optimizer.rebalancing._rebalancer",
]
warn_return_any = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.coverage.run]
branch = true
source = ["optimizer"]
omit = ["optimizer/moments/_dmm.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["optimizer", "examples"]
exclude = [
    "**/__pycache__",
    "optimizer/moments/_dmm.py",
]

# Libraries with missing/incomplete stubs (sklearn, skfolio, hmmlearn, arch)
reportMissingTypeStubs = false
reportMissingImports = false

# Unknown type propagation from pandas/numpy/sklearn/skfolio
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownLambdaType = false

# Pandas/numpy operator and attribute false positives
reportOperatorIssue = false
reportAttributeAccessIssue = false
reportIndexIssue = false

# Demote to warning (catch real bugs, don't block on stub gaps)
reportReturnType = "warning"
reportCallIssue = "warning"
reportArgumentType = "warning"

# sklearn/skfolio base class overrides have incompatible signatures
reportIncompatibleMethodOverride = false

# pandas operations return overly broad union types (Scalar | Series | DataFrame)
reportAssignmentType = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
